--- a/WebRoot/index.html
+++ b/WebRoot/index.html
@@ -11,44 +11,203 @@
 <script type="text/javascript" src="js/jquery.min.js"></script>
 <script type="text/javascript" src="js/bootstrap.min.js"></script>
 <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css"></link>
-
+<script type="text/javascript" src="js/md5.js"></script>
 <script type="text/javascript">
 	$(function() {
-		var token = "";
+		var token1 = "";
 		var user = {
-			username : 1,
-			password : 12
+			phone : 13590440185,
+			password : 123456
 		};
 		$.ajax({
 			type : "post",
-			url : "back/admin/login",
+			url : "app/user/login",
 			data : user,
 			dataType : "json",
 			//contentType : 'application/json;charset=utf-8',
 			async : false,
 			cache : false,
 			success : function(data) {
-				token = data.data.token;
-				console.log(token);
+				token1 = data.data.token;
+				console.log(token1);
+			},
+			error : function(data) {
+				alert("error");
+			}
+		});
+		var token2 = "";
+		var admin = {
+			username : 22,
+			password : hex_md5("22")
+		};
+		$.ajax({
+			type : "post",
+			url : "back/admin/login",
+			data : admin,
+			dataType : "json",
+			//contentType : 'application/json;charset=utf-8',
+			async : false,
+			cache : false,
+			success : function(data) {
+				token2 = data.data.token;
+				console.log(token2);
 			},
 			error : function(data) {
 				alert("error");
 			}
 		});
 		$("#btn1").click(function() {
-			var xml ="<xml><appid><![CDATA[wx2421b1c4370ec43b]]></appid><attach><![CDATA[支付测试]]></attach><bank_type><![CDATA[CFT]]></bank_type><fee_type><![CDATA[CNY]]></fee_type><is_subscribe><![CDATA[Y]]></is_subscribe><mch_id><![CDATA[10000100]]></mch_id><nonce_str><![CDATA[5d2b6c2a8db53831f7eda20af46e531c]]></nonce_str><openid><![CDATA[oUpF8uMEb4qRXf22hE3X68TekukE]]></openid><out_trade_no><![CDATA[1409811653]]></out_trade_no><result_code><![CDATA[SUCCESS]]></result_code><return_code><![CDATA[SUCCESS]]></return_code><sign><![CDATA[B552ED6B279343CB493C5DD0D78AB241]]></sign><sub_mch_id><![CDATA[10000100]]></sub_mch_id><time_end><![CDATA[20140903131540]]></time_end><total_fee>1</total_fee><trade_type><![CDATA[JSAPI]]></trade_type><transaction_id><![CDATA[1004400740201409030005092168]]></transaction_id></xml>";
+			var xml = "";
 			$.ajax({
 				type : "post",
 				url : "back/orders/notifyWxPay",
 				headers : {
-					"token" : token
+					"token" : token1
 				},
-				data : xml,								
-				contentType :"text/xml; charset=utf-8",
-				dataType : "xml",
+				data : xml,
+				contentType : "text/xml; charset=utf-8",
+				dataType : "json",
 				success : function(data) {
-					//console.log(JSON.stringify(data));
-					console.log(data);					
+					console.log(JSON.stringify(data));
+					//console.log(data);
+				},
+				error : function(data) {
+					alert("error");
+				}
+			});
+		});
+		$("#btn2").click(function() {
+			var json = {
+				message : "asdasfafdgsadg"
+			};
+			$.ajax({
+				type : "post",
+				url : "app/user/addFeedback",
+				headers : {
+					"token" : token1
+				},
+				data : json,
+				//contentType : "text/xml; charset=utf-8",
+				dataType : "json",
+				success : function(data) {
+					console.log(JSON.stringify(data));
+					//console.log(data);
+				},
+				error : function(data) {
+					alert("error");
+				}
+			});
+		});
+		$("#btn3").click(function() {
+			var json = {};
+			$.ajax({
+				type : "post",
+				url : "back/user/getFeedbackList",
+				headers : {
+					"token" : token2
+				},
+				data : json,
+				//contentType : "text/xml; charset=utf-8",
+				dataType : "json",
+				success : function(data) {
+					console.log(JSON.stringify(data));
+					//console.log(data);
+				},
+				error : function(data) {
+					alert("error");
+				}
+			});
+		});
+		$("#btn4").click(function() {
+			var json = {
+				id : 3
+			};
+			$.ajax({
+				type : "post",
+				url : "back/user/deleteFeedback",
+				headers : {
+					"token" : token2
+				},
+				data : json,
+				//contentType : "text/xml; charset=utf-8",
+				dataType : "json",
+				success : function(data) {
+					console.log(JSON.stringify(data));
+					//console.log(data);
+				},
+				error : function(data) {
+					alert("error");
+				}
+			});
+		});
+		$("#btn5").click(function() {
+			var json = {
+				id : 3
+			};
+			$.ajax({
+				type : "post",
+				url : "back/user/updateFeedbackState",
+				headers : {
+					"token" : token2
+				},
+				data : json,
+				//contentType : "text/xml; charset=utf-8",
+				dataType : "json",
+				success : function(data) {
+					console.log(JSON.stringify(data));
+					//console.log(data);
+				},
+				error : function(data) {
+					alert("error");
+				}
+			});
+		});
+		$("#btn6").click(function() {
+			var json = {
+				id : 12
+			};
+			$.ajax({
+				type : "post",
+				url : "back/goods/delCatalog",
+				headers : {
+					"token" : token2
+				},
+				data : json,
+				//contentType : "text/xml; charset=utf-8",
+				dataType : "json",
+				success : function(data) {
+					console.log(JSON.stringify(data));
+					//console.log(data);
+				},
+				error : function(data) {
+					alert("error");
+				}
+			});
+		});
+		$("#btn7").click(function() {
+			var json = {
+				"details" : [ {
+					"goodsId" : 3,
+					"time" : 12564521
+				}, {
+					"goodsId" : 1,
+					"time" : 13546161
+				} ]
+			};
+			console.log(JSON.stringify(json));
+			$.ajax({
+				type : "post",
+				url : "app/goods/test",
+				headers : {
+					"token" : token1
+				},
+				data : JSON.stringify(json),
+				//contentType : "text/xml; charset=utf-8",
+				contentType: "application/json",				
+				dataType : "json",
+				success : function(data) {
+					console.log(JSON.stringify(data));
+					//console.log(data);
 				},
 				error : function(data) {
 					alert("error");
@@ -60,7 +219,13 @@
 </head>
 <body>
 	<div class="container">
-		<input type="button" value="postXml" id="btn1">
+		<input type="button" value="postXml" id="btn1"> <input
+			type="button" value="addFeedback" id="btn2"> <input
+			type="button" value="getFeedbackList" id="btn3"> <input
+			type="button" value="deleteFeedback" id="btn4"> <input
+			type="button" value="updateFeedbackState" id="btn5"> <input
+			type="button" value="delCatalog" id="btn6"> <input
+			type="button" value="addOrder" id="btn7">
 	</div>
 </body>
 </html>
