--- a/WebRoot/commodity.html
+++ b/WebRoot/commodity.html
@@ -286,7 +286,7 @@ ul,li {
 							<div class="form-group">
 								<label for="price">商品单位(必填)</label> <input type="text"
 									class="form-control" name="unit" id="xg_unit"
-									placeholder="请输入商品单位" aria-describedby="stmp">
+									placeholder="请输入商品单位:数字+中文或字母" aria-describedby="stmp">
 							</div>
 							<div class="form-group">
 								<label for="price">商品图片(必填)</label> <input type="file"
