--- a/WebRoot/demo2.html
+++ b/WebRoot/demo2.html
@@ -12,34 +12,23 @@
 <!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
 <script src="js/bootstrap.min.js"></script>
 <script type="text/javascript">
-	function hideTips() {
-		$("#success_alert").hide();
-		$("#error_alert").hide();
+	var orderNum;
+	function GetQueryString(name) {
+		var reg = new RegExp("(^|&)" + name + "=([^&]*)(&|$)");
+		var r = window.location.search.substr(1).match(reg);
+		if (r != null)
+			return unescape(r[2]);
+		return '';
 	}
 	$(function() {
-		$("#form1").submit(function() {
-			$.ajax({
-				type : "post",
-				url : "back/staff/addStaffPromotion",
-				data : {
-					content : $("#content").val()
-				},
-				cache : false,
-				async : false,
-				success : function(data) {
-					if (data.code == 100) {
-						$("#success_alert").show();
-						$("#success_alert").html('<a href="#" class="close" data-dismiss="alert">&times;</a> <strong>'+data.msg+'</strong>');
-					} else {
-						$("#error_alert").show();
-						$("#error_alert").html('<a href="#" class="close" data-dismiss="alert">&times;</a> <strong>'+data.msg+'</strong>');
-					}
-					setTimeout("hideTips()", 1000);
-				},
-				error : function(data) {
-					alert("error");
-				}
-			});
+		orderNum = GetQueryString("orderNum");
+		if (orderNum === '') {
+		} else {
+			$("#f").attr("src", "mobileHtml/staffOrder.html");
+		}
+		$(".nav li").hover(function() {
+			$(".nav li").attr("class", "");
+			$(this).attr("class", "active");
 		});
 	});
 </script>
@@ -50,27 +39,27 @@
 		<div class="row">
 			<div class="span12 col-xs-12 col-md-12 col-lg-12">
 				<h3 class="text-center">磐石维护</h3>
-				<ul class="breadcrumb">
-					<li>APP推广信息上报 <span class="divider">/</span>
-					</li> 其他
+				<ul class="nav nav-pills">
+					<li role="presentation" class=""><a
+						href="mobileHtml/promotion.html" target="f">APP推广信息上报 </a></li>
+					<li role="presentation"><a href="mobileHtml/staffOrder.html"
+						target="f">订单信息绑定</a></li>
+					<li role="presentation"><a href="#">其他</a></li>
 				</ul>
-				<form id="form1" method="post" target="iframe1">
-					<div class="input-group">
-						<input name="content" id="content" type="text"
-							class="form-control" placeholder="填写格式：x小区x栋x单元x号，员工号"
-							pattern=".*小区.*栋.*单元.*号.\d+" /> <span class="input-group-btn">
-							<button class="btn btn-default" id="btn1" type="submit">提交</button>
-						</span>
-					</div>
-					<div id="success_alert" style="display: none" class="alert alert-success">
-						<a href="#" class="close" data-dismiss="alert">&times;</a> <strong>提交成功！</strong>
-					</div>
-					<div id="error_alert" style="display: none" class="alert alert-warning">
-						<a href="#" class="close" data-dismiss="alert">&times;</a> <strong>提交失败，请重试！</strong>
-					</div>
-					<iframe id="iframe1" name="iframe1" style="display:none;"></iframe>
-				</form>
+				<!-- 
+				<ul class="breadcrumb">
+					<li><a href="mobileHtml/promotion.html" target="f">APP推广信息上报
+					</a></li>
+					<li><a href="mobileHtml/staffOrder.html" target="f">订单信息绑定</a>
+					</li>
+					<li>其他</li>
+				</ul>
+				 -->
 			</div>
+			<!----------------主体内容（开始）----------------------->
+			<iframe class="span12 col-xs-12 col-md-12 col-lg-12" id="f" name="f"
+				frameborder="no" border="0" src="mobileHtml/promotion.html"></iframe>
+			<!----------------主体内容（结束）----------------------->
 		</div>
 	</div>
 </body>
