--- a/WebRoot/index.html
+++ b/WebRoot/index.html
@@ -163,6 +163,26 @@
 							</div>
 						</a>
 					</li>
+					<li>
+						<a href="staff.html" target="f">
+							<div style="width: 100%; text-align: center; margin-left: 8px;">
+								<i class="fa fa-user-secret" style="font-size: 20px"></i>
+							</div>
+							<div>
+								员工信息维护
+							</div>
+						</a>
+					</li>
+					<li>
+						<a href="tv.html" target="f">
+							<div style="width: 100%; text-align: center; margin-left: 8px;">
+								<i class="fa fa-user-secret" style="font-size: 20px"></i>
+							</div>
+							<div>
+								电视直播
+							</div>
+						</a>
+					</li>
 					<!--<li>
 						<a href="administrator.html" target="f">
 							<div style="width: 100%; text-align: center; margin-left: 8px;">
