优化后台管理的订单详情和订单取消

--- a/WebRoot/commodity.html
+++ b/WebRoot/commodity.html
@@ -98,7 +98,7 @@ ul,li {
 			<ul id="directory">
 			</ul>
 		</div>
-		<div class="r_content">
+		<div class="r_content" style="overflow-y:scroll; overflow-x:hidden;table-layout: fixed;word-wrap:break-word;word-break:break-all;">
 			<div class="webdesigntuts-workshop"
 				style="margin:10px; height: 30px;">
 
@@ -116,7 +116,7 @@ ul,li {
 						style="background: #0066CC; border: none; outline: none; color: #FFFFFF;">搜索</button>
 				</div>
 			</div>
-			<div id="browser" class="tbtree" style="text-align: center;">
+			<div id="browser" class="tbtree" style="text-align: center; ">
 
 				<div id="mainTbtable" class='uqt_detail'>
 					<table id="UQT_detailTable" class="">
