--- a/WebRoot/details.html
+++ b/WebRoot/details.html
@@ -6,44 +6,44 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 
-	<head>
-		<meta charset="utf-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<title></title>
-		<!--jquery库-->
-		<script src="js/jquery.min.js"></script>
-		<!--bootstrap库-->
-		<link href="css/bootstrap.min.css" rel="stylesheet" />
-		<script src="js/bootstrap/bootstrap.min.js"></script>
-		<!--font-awesome字体库-->
-		<link href="css/font-awesome.min.css" rel="stylesheet" />
-		<!--平滑滚动到顶部库-->
-		<script src="js/jquery.scrolltopcontrol/scrolltopcontrol.js" type="text/javascript"></script>
-		<!--主要写的jquery拓展方法-->
-		<script src="js/jquery.extend.js" type="text/javascript"></script>
-		<!--主要写的css代码-->
-		<link href="css/default.css" rel="stylesheet" type="text/css" />
-		<script src="js/default.js" type="text/javascript"></script>
-		<link href="css/query_startic_pro.css" rel="stylesheet" type="text/css" />
-		<script src="js/details.js" type="text/javascript"></script>
-	</head>
+<head>
+<meta charset="utf-8" />
+<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title></title>
+<!--jquery库-->
+<script src="js/jquery.min.js"></script>
+<!--bootstrap库-->
+<link href="css/bootstrap.min.css" rel="stylesheet" />
+<script src="js/bootstrap/bootstrap.min.js"></script>
+<!--font-awesome字体库-->
+<link href="css/font-awesome.min.css" rel="stylesheet" />
+<!--平滑滚动到顶部库-->
+<script src="js/jquery.scrolltopcontrol/scrolltopcontrol.js"
+	type="text/javascript"></script>
+<!--主要写的jquery拓展方法-->
+<script src="js/jquery.extend.js" type="text/javascript"></script>
+<!--主要写的css代码-->
+<link href="css/default.css" rel="stylesheet" type="text/css" />
+<script src="js/default.js" type="text/javascript"></script>
+<link href="css/query_startic_pro.css" rel="stylesheet" type="text/css" />
+<script src="js/details.js" type="text/javascript"></script>
+</head>
 
-	<body>
-		<div class="main-ontent" style="position: absolute;">
+<body>
+	<div class="container-fluid" >
+		<!-- 
 			<button type="button" onclick="fh()" style="width: 30px; height: 30px; margin: 10px; background: url(img/fh.png); border: none; outline: none;" title="返回"></button>
-			<div id="browser" class="tbtree" style="text-align: center;">
+			 -->
+		<div id="browser" class="tbtree" style="text-align: center">
 
-				<div id="mainTbtable" class='uqt_detail'>
-					<table id="UQT_detailTable" class="">
-					</table>
-				</div>
-
-				<div id="div_pager" class="page_con">
-
-				</div>
+			<div id="mainTbtable" class='uqt_detail'>
+				<table id="UQT_detailTable" class="">
+				</table>
 			</div>
+
 		</div>
-	</body>
+	</div>
+</body>
 
 </html>
