--- a/WebRoot/commodity.html
+++ b/WebRoot/commodity.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
-
+<!-- 商品管理模块-->
 <head>
 <meta charset="utf-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
