--- a/WebRoot/repair.html
+++ b/WebRoot/repair.html
@@ -64,6 +64,10 @@
 							<input type="text" class="form-control" name="userid" id="UserId"
 								aria-describedby="stmp">
 						</div>
+						<div style="display: none;">
+							<input type="text" class="form-control" name="isRead" id="isRead"
+								aria-describedby="stmp">
+						</div>
 						<div class="form-group has-feedback">
 							<label for="id">员工编号(必填)</label> <input type="text"
 								class="form-control" name="staffId" id="OrderstaffId"
@@ -101,7 +105,7 @@
 						<div class="form-group">
 							<label for="price">维修内容</label>
 							<textarea class="form-control" name="description"
-								id="Orderdescription" rows="2" placeholder="请输入维修内容"></textarea>
+								readonly id="Orderdescription" rows="2" placeholder="请输入维修内容"></textarea>
 						</div>
 
 						<input type="reset" name="reset" style="display: none;" />
