--- a/WebRoot/tv.html
+++ b/WebRoot/tv.html
@@ -28,6 +28,11 @@
 		<div style="float: left;">
 			<button data-toggle='modal' data-target='#tjtv'
 				style="background: #0066CC; border: none; outline: none; color: #FFFFFF;">添加直播节目</button>
+			<input type="search" id="seek_text" placeholder="按节目名称搜索">
+			<button onclick="seek()"
+				style="background: #0066CC; border: none; outline: none; color: #FFFFFF;">搜索</button>
+			<button onclick="reset()"
+				style="background: #0066CC; border: none; outline: none; color: #FFFFFF;">重置</button>
 		</div>
 	</div>
 	<div id="browser" class="tbtree" style="text-align: center;">
@@ -72,7 +77,7 @@
 						</div>
 						<div class="form-group has-feedback">
 							<label for="name">直播地址(必填)</label> <input type="text"
-								class="form-control" name="tvUrl" id="xg_tvUrl" 
+								class="form-control" name="tvUrl" id="xg_tvUrl"
 								placeholder="请填写直播地址" aria-describedby="stmp">
 						</div>
 						<input type="reset" name="reset" style="display: none;" />
